tests/script_errors/arith_bad_shift_1/error.txt
Error: 
    1 | 42 >> 64
      | ^^^^^^^^ RHS value is larger than or equal to the number of bits in LHS value